--- a/about.html
+++ b/about.html
@@ -6,9 +6,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About us</title>
   <link rel="stylesheet" href="./style/about.css">
+  <link rel="stylesheet" href="./style/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
-  <header></header>
+  <header class="header">
+    <div class="head-header">
+      <div class="container-header">
+        <a class="active" href="#">RUS</a>
+        <a href="#">UZB</a>
+      </div>
+    </div>
+    <div class="container-header">
+      <nav class="nav">
+        <div class="logo">
+          <div class="toogle"><i onclick="toggle()" class="fa-solid fa-bars"></i></div>
+          <div class="logo1-div">
+            <img class="logo1" src="./images/MILANDI.png" alt="logo">
+          </div>
+          <img class="logo2" src="./images/logo.svg" alt="">
+        </div>
+        <div class="navbar">
+          <ul id="menus">
+            <div class="toogle"><i onclick="toggle()" class="fa-solid fa-bars"></i></div>
+            <li>
+              <a href="./index.html">Главная</a>
+            </li>
+            <li>
+              <a href="./about.html">О нас</a>
+            </li>
+            <li>
+              <a href="./categories.html">Категории</a>
+            </li>
+            <li>
+              <a href="./partner.html">Сотрудничество</a>
+            </li>
+          </ul>
+          <div class="nav-right">
+            <button type="reset" formaction="./login.html" >Войти</button>
+            <button>Зарегистрироваться</button>
+            <a href="#"><img src="./images/ic_cart.png" alt=""></a>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </header>
   <main>
       <section class="biz">
          <div class="container">
@@ -98,6 +140,50 @@
        </div>
       </section>
   </main>
-  <footer></footer>
+  <footer>
+    <div class="container">
+      <div>
+        <h5>про imperia</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget pretium aenean dignissim sit cursus dictumst
+          adipiscing nunc.</p>
+        <div><img src="./images/footer.png" alt=""></div>
+      </div>
+      <div>
+        <h5>контакты</h5>
+        <p>+998 90 958 78 87</p>
+        <p>support@fonon.uz</p>
+        <h5>рабочее время</h5>
+        <p>По будням 9:00 to 18:00</p>
+        <p>В выходные 11:00 to 18:00</p>
+      </div>
+      <div>
+        <h5>Меню</h5>
+        <p>Главная</p>
+        <p>О нас</p>
+        <p>Категории</p>
+        <p>Сотрудничество</p>
+      </div>
+      <div>
+        <h5>категории</h5>
+        <p>Женская одежда</p>
+        <p>Мужская одежда</p>
+        <p>Детская одежда</p>
+        <p>Обувь</p>
+        <p>Сумки</p>
+        <p>Аксесуары</p>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+      function toggle() {
+        const menus = document.getElementById("menus");
+        if (menus.className === "navbar") {
+          menus.className = "navbar responsive";
+        } else {
+          menus.className = "navbar";
+        }
+      }
+  </script>
 </body>
 </html>
