--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./style/about.css">
   <link rel="stylesheet" href="./style/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+  <link rel="shortcut icon" href="./images/logo.svg" type="image/x-icon">
 </head>
 <body>
   <header class="header">
