--- a/categories.html
+++ b/categories.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <div class="head-header">
       <div class="container-header">
         <a class="active" href="#">RUS</a>
@@ -26,31 +26,34 @@
       </div>
     </div>
     <div class="container-header">
-      <nav>
+      <nav class="nav">
         <div class="logo">
-          <img src="./images/MILANDI.png" alt="logo">
+          <div class="toogle"><i onclick="toggle()" class="fa-solid fa-bars"></i></div>
+          <div class="logo1-div">
+            <img class="logo1" src="./images/MILANDI.png" alt="logo">
+          </div>
+          <img class="logo2" src="./images/logo.svg" alt="">
         </div>
         <div class="navbar">
-          <ul class="menus">
-      
-              <li>
-                <a href="./index.html">Главная</a>
-              </li>
-              <li>
-                <a href="./about.html">О нас</a>
-              </li>
-              <li>
-                <a href="./categories.html">Категории</a>
-              </li>
-              <li>
-                <a href="./partner.html">Сотрудничество</a>
-              </li>
-        
+          <ul id="menus">
+            <div class="toogle"><i onclick="toggle()" class="fa-solid fa-bars"></i></div>
+            <li>
+              <a href="./index.html">Главная</a>
+            </li>
+            <li>
+              <a href="./about.html">О нас</a>
+            </li>
+            <li>
+              <a href="./categories.html">Категории</a>
+            </li>
+            <li>
+              <a href="./partner.html">Сотрудничество</a>
+            </li>
           </ul>
           <div class="nav-right">
-            <button>Войти</button>
+            <button type="reset" formaction="./login.html" >Войти</button>
             <button>Зарегистрироваться</button>
-            <a href="#"><i class="fa-light fa-basket-shopping"></i></a>
+            <a href="#"><img src="./images/ic_cart.png" alt=""></a>
           </div>
         </div>
       </nav>
