--- a/categories.html
+++ b/categories.html
@@ -12,9 +12,12 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;500;700;800&family=Roboto:wght@400;700&display=swap"
     rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;500;700;800&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-<link rel="shortcut icon" href="./images/logo.svg" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;500;700;800&family=Roboto:wght@400;700&display=swap"
+    rel="stylesheet">
+  <link rel="shortcut icon" href="./images/logo.svg" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 
 <body>
@@ -51,7 +54,7 @@
             </li>
           </ul>
           <div class="nav-right">
-            <button type="reset" formaction="./login.html" >Войти</button>
+            <button type="reset" formaction="./login.html">Войти</button>
             <button>Зарегистрироваться</button>
             <a href="#"><img src="./images/ic_cart.png" alt=""></a>
           </div>
@@ -125,17 +128,17 @@
     <div class="container">
       <div>
         <h5>про imperia</h5>
-<<<<<<< HEAD
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget pretium aenean dignissim sit cursus dictumst
+        <<<<<<< HEAD <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget pretium aenean dignissim sit
+          cursus dictumst
           adipiscing nunc.</p>
-        <div><img src="./images/footer.png" alt=""></div>
-=======
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget
-          pretium aenean dignissim sit cursus dictumst adipiscing nunc.
-        </p>
-        <div><img src="./images/footer.png" alt="" /></div>
->>>>>>> 5ee91db00c5caf7610571d176c7821b06cae9cf7
+          <div><img src="./images/footer.png" alt=""></div>
+          =======
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget
+            pretium aenean dignissim sit cursus dictumst adipiscing nunc.
+          </p>
+          <div><img src="./images/footer.png" alt="" /></div>
+          >>>>>>> 5ee91db00c5caf7610571d176c7821b06cae9cf7
       </div>
       <div>
         <h5>контакты</h5>
@@ -163,6 +166,18 @@
       </div>
     </div>
   </footer>
+
+  <script>
+    function toggle() {
+      const menus = document.getElementById("menus");
+      if (menus.className === "navbar") {
+        menus.className = "navbar responsive";
+      } else {
+        menus.className = "navbar";
+      }
+    }
+  </script>
+  
 </body>
 
 </html>
