--- a/partner.html
+++ b/partner.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="./images/logo.svg" type="image/x-icon" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   </head>
   <body>
     <header class="header">
