--- a/about.html
+++ b/about.html
@@ -10,10 +10,93 @@
 <body>
   <header></header>
   <main>
-    <div class="card">
-      <h1>fdsakjf</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, recusandae.</p>
-    </div>
+      <section class="biz">
+         <div class="container">
+          <h2 class="h2"> О нас</h2>
+          <div class="biz-haqimizda">
+            <div class="biz-haqimizda1">
+                <h3>«Потрясающий опыт, мне это нравится
+                  много. Спасибо команде.</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat leo, in sit tellus fermentum donec quisque diam molestie. Enim purus ullamcorper ultricies nisi. Eu sit laoreet egestas nascetur lacinia donec nunc viverra. Eu nullam cras eget egestas dui id platea magna. Massa lorem ultrices mauris tellus, mattis eu leo bibendum lobortis. </p>
+            </div>
+            <div class="biz-haqimizda1">
+               <div class="foto">
+                <img src="./images/1-rasm.png" alt="rasm">
+               </div>
+            </div>
+          </div>
+          <h2 class="font-size">Наши преимущества</h2>
+         </div>
+      </section>
+      <section class="servis">
+        <div class="container">
+        <div class="shaxsiy-servis">
+            <div class="one">
+              <div class="icon"><img src="./images/ic_stars.png" alt="yulduz"></div>
+              <p>Лучший сервис</p>
+            </div>
+            <div class="one">
+              <div class="icon"><img src="./images/fura.png" alt="fura"></div>
+              <p>Экспресс доставка </p>
+            </div>
+            <div class="one">
+              <div class="icon"><img src="./images/stiker.png" alt="stiker"></div>
+              <p>Лучшее качество в стране</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="prilojeniya">
+          <div class="container">
+            <div class="prilojeniya">
+              <div class="prl">
+                <img src="./images/2-rasm.png" alt="">
+              </div>
+              <div class="prl2">
+                <h3>Скачай приложение и получай призы каждый день</h3>
+                <p>Скачав наш приложение вы получаете возможность играть в призовые игры каждый день и выигровать разного рода подарки для себя.
+                  В нашем приложении призовые игры проходят аблолютно каждый день и всё это совершенно бесплатно.</p>
+                  <a href="#"><img src="./images/app.png" alt=""></a>
+                  <a href="#"><img src="./images/google.png" alt=""></a>
+              </div>
+            </div>
+          </div>
+      </section>
+
+      <section id="iframe">
+       <div class="frm">
+        <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11992.292271740209!2d69.18961102100025!3d41.285514199999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8ba578f4f58d%3A0xd7a2ecf23413b7a0!2sNajot%20Ta&#39;lim%20Chilonzor%20Filial!5e0!3m2!1sen!2s!4v1665223314871!5m2!1sen!2s"
+        width="100%"
+        height="600"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+       </div>
+       <div class="frm1">
+           <h3>Работаем по всему миру.</h3>
+           <ul>
+            <li>
+              <h4>Bali</h4>
+              <p>508 Bridle Avenue Newnan, GA 30263</p>
+            </li>
+            <li>
+              <h4>London</h4>
+              <p>508 Bridle Avenue Newnan, GA 30263</p>
+            </li>
+            <li>
+              <h4>Moscow</h4>
+              <p>508 Bridle Avenue Newnan, GA 30263</p>
+            </li>
+            <li>
+              <h4>Prague</h4>
+              <p>508 Bridle Avenue Newnan, GA 30263</p>
+            </li>
+           </ul>
+       </div>
+      </section>
   </main>
   <footer></footer>
 </body>
